// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to custom the className of action 1`] = `
<div role="menuitem"
     class="r-popover__action foo"
     tabindex="0"
>
  <div class="r-popover__action-text r-hairline--bottom">
    Option
  </div>
</div>
`;

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<span class="r-popover__wrapper">
</span>
<transition-stub name="r-popover-zoom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popover r-popover--light"
  >
    <div class="r-popover__arrow">
    </div>
    <div role="menu"
         class="r-popover__content"
    >
      <div role="menuitem"
           class="r-popover__action r-popover__action--with-icon"
           tabindex="0"
      >
        <i class="r-badge__wrapper my-icon my-icon-success r-popover__action-icon">
        </i>
        <div class="r-popover__action-text r-hairline--bottom">
          foo
        </div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`should locate to reference element when showed 1`] = `
<transition-stub name="r-popover-zoom"
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
`;

exports[`should locate to reference element when showed 2`] = `
<transition-stub name="r-popover-zoom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div style="z-index: 2007; position: absolute; left: 0px; top: 108px; margin: 0px;"
       role="dialog"
       tabindex="0"
       class="r-popup r-popover r-popover--light"
       data-popper-placement="bottom"
  >
    <div class="r-popover__arrow">
    </div>
    <div role="menu"
         class="r-popover__content"
    >
    </div>
  </div>
</transition-stub>
`;

exports[`should locate to reference element when showed 3`] = `
<transition-stub name="r-popover-zoom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div style="z-index: 2007; position: absolute; left: 0px; top: 108px; margin: 0px; display: none;"
       role="dialog"
       tabindex="0"
       class="r-popup r-popover r-popover--light"
       data-popper-placement="bottom"
  >
    <div class="r-popover__arrow">
    </div>
    <div role="menu"
         class="r-popover__content"
    >
    </div>
  </div>
</transition-stub>
`;

exports[`should render action slot correctly 1`] = `
<div role="menuitem"
     class="r-popover__action"
     tabindex="0"
>
  name: Text, index: 0
</div>
`;

exports[`should watch placement prop and update location 1`] = `
<transition-stub name="r-popover-zoom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popover r-popover--light"
       style="z-index: 2008; position: absolute; left: 0px; top: -108px; margin: 0px;"
       data-popper-placement="top"
  >
    <div class="r-popover__arrow">
    </div>
    <div role="menu"
         class="r-popover__content"
    >
    </div>
  </div>
</transition-stub>
`;
